# todo-cli

./: .gitignore  CONTEXT.md  Cargo.toml  LICENSE  README.md  flake.nix
scripts/: build.sh  install-completions.sh
src/: cli.rs  date_parser.rs  error.rs  filter.rs  main.rs  renderer.rs  storage.rs  task.rs
